# ornament-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/infernal-sys/: Cargo.toml  build.rs
crates/infernal-sys/src/: lib.rs
crates/ornament-cli/: Cargo.toml
crates/ornament-cli/src/: main.rs
crates/ornament-core/: Cargo.toml
crates/ornament-core/src/: lib.rs
crates/ornament-core/src/analysis/: compatibility.rs  mod.rs  odd_trna.rs
crates/ornament-core/src/infernal/: ffi.rs  mod.rs  parser.rs  runner.rs
crates/ornament-core/src/integration/: mod.rs  modkit.rs
crates/ornament-core/src/modification/: database.rs  mod.rs  modomics.rs  sprinzl.rs  types.rs
crates/ornament-core/src/output/: formats.rs  mod.rs
data/: download-modomics.sh  modomics_modifications.json
scripts/: setup-deps.sh
