[package]
name = "infernal-sys"
description = "FFI bindings to Infernal, HMMER, and Easel libraries"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
links = "infernal"
build = "build.rs"

[build-dependencies]
cc = "1"
bindgen = "0.70"

[features]
default = []
# Enable SSE vector instructions (x86_64)
sse = []
# Enable NEON vector instructions (aarch64)
neon = []
