[package]
name = "ornament-core"
description = "Modification-aware tRNA analysis library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
infernal-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
bio = { workspace = true }

[dev-dependencies]
